[package]
name = "str-array"
license = "MIT/Apache-2.0"
authors = ["Elichai <elichai.turkel@gmail.com>"]
repository = "https://github.com/elichai/str-array"
description = "Stack based owned String"
version = "0.1.0"
edition = "2021"
keywords = ["no_std", "no-std", "utility", "string"]


[features]
default = ["std"]
std = ["alloc"]
alloc = []
